<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#F4F2F2"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/card1">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/language"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/change"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="28sp"
            android:layout_marginTop="35dp"
            android:textColor="#fff"
            android:layout_marginLeft="80dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <androidx.cardview.widget.CardView
               android:layout_width="140dp"
               android:layout_height="150dp"
               android:layout_margin="16sp"
               app:cardElevation="10dp"
               app:cardCornerRadius="10dp"
               android:background="#fff">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:background="#F17762"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/cases"
                   android:textColor="#fff"
                   android:id="@+id/cases"
                   android:textSize="14sp"
                   android:layout_margin="10dp"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/totalcases"
                   android:text="0"
                   android:textAlignment="center"
                   android:layout_marginTop="60dp"
                   android:textSize="18sp"
                   android:textColor="#fff"
                   android:layout_gravity="center_horizontal" />
           </androidx.cardview.widget.CardView>

       </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:layout_margin="16dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:background="#fff">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ADF1AF"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovery"
                    android:id="@+id/recoveries"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="60dp"
                    android:id="@+id/totalrecovey"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="#fff"
                    android:layout_gravity="center_horizontal" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:layout_margin="16dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:background="#fff">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#DC553E"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/death"
                    android:id="@+id/deathies"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totaldeath"
                    android:text="0"
                    android:layout_marginTop="60dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="#fff"
                    android:layout_gravity="center_horizontal" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:layout_margin="16dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:background="#fff">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#D7FAAE"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/critical"
                    android:textColor="#fff"
                    android:id="@+id/criticals"
                    android:textSize="14sp"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="60dp"
                    android:textAlignment="center"
                    android:id="@+id/totalcritical"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="18sp"
                    android:textColor="#fff"
                    android:layout_gravity="center_horizontal" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/country"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="65dp"
        android:textAllCaps="false"
        android:id="@+id/searcCountry"/>
</LinearLayout>