<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFBFB"
    android:orientation="vertical"
    tools:context=".CountryDetailes">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/card1">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/corona"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="covid 19 Global"
            android:id="@+id/country_detailed_name"
            android:textSize="20sp"
            android:layout_marginTop="35dp"
            android:textColor="#fff"
            android:layout_marginLeft="80dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:background="#fff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovery"
                    android:textColor="#4CD8EA"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                   />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/recovery"
                    android:text="Total Case"
                    android:layout_marginTop="65dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="18sp"
                    android:textColor="#4CD8EA"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:background="#fff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/death"
                    android:textColor="#4CD8EA"
                    android:textSize="16sp"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="65dp"
                    android:layout_marginLeft="15dp"
                    android:id="@+id/death"
                    android:layout_height="wrap_content"
                    android:text="Total Recovery"
                    android:textSize="18sp"
                    android:textColor="#4CD8EA"
               />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dp"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:background="#fff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/active"
                    android:textColor="#4CD8EA"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/active"
                    android:text="Total Case"
                    android:layout_marginTop="65dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="18sp"
                    android:textColor="#4CD8EA"
                    />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:background="#fff">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cases"
                    android:textColor="#4CD8EA"
                    android:textSize="16sp"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="65dp"
                    android:layout_marginLeft="15dp"
                    android:layout_height="wrap_content"
                    android:text="Total Recovery"
                    android:id="@+id/critical"
                    android:textSize="18sp"
                    android:textColor="#4CD8EA"
                     />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:background="#fff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todaydeath"
                    android:textColor="#4CD8EA"
                    android:textSize="16sp"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/todaysdeath"
                    android:text="today`s death"
                    android:layout_marginTop="65dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="18sp"
                    android:textColor="#4CD8EA"
                    />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:background="#fff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todaycases"
                    android:textColor="#4CD8EA"
                    android:textSize="16sp"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="65dp"
                    android:layout_marginLeft="15dp"
                    android:id="@+id/todaycases"
                    android:layout_height="wrap_content"
                    android:text="Total Recovery"
                    android:textSize="18sp"
                    android:textColor="#4CD8EA"
                 />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>